k8s_yaml/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: phpipam
  labels:
    app.kubernetes.io/name: phpipam
    app.kubernetes.io/instance: my-phpipam
