k8s_yaml/statefulset-db.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: phpipam-db
  namespace: phpipam
  labels:
    app.kubernetes.io/name: phpipam
    app.kubernetes.io/instance: my-phpipam
    app.kubernetes.io/component: phpipam-db
spec:
  replicas: 1
  serviceName: phpipam-db
  selector:
    matchLabels:
      app.kubernetes.io/name: phpipam
      app.kubernetes.io/instance: my-phpipam
      app.kubernetes.io/component: phpipam-db
  template:
    metadata:
      labels:
        app.kubernetes.io/name: phpipam
        app.kubernetes.io/instance: my-phpipam
        app.kubernetes.io/component: phpipam-db
    spec:
      containers:
      - image: mariadb:10.2
        imagePullPolicy: IfNotPresent
        name: phpipam-db
        resources:
          requests:
            cpu: 10m
            memory: 10Mi
          limits:
            cpu: 200m
            memory: 500Mi
        ports:
        - containerPort: 3306
          protocol: TCP
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: phpipam-mysql-data
          readOnly: false
        - mountPath: /backup
          name: mariadb-backup-persistent-storage
          readOnly: true
        livenessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - exec mysqladmin ping -h 127.0.0.1 -u root -p$MYSQL_ROOT_PASSWORD
          initialDelaySeconds: 10
          timeoutSeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - exec mysqladmin ping -h 127.0.0.1 -u root -p$MYSQL_ROOT_PASSWORD
          initialDelaySeconds: 10
          timeoutSeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
      nodeSelector:
        beta.kubernetes.io/arch: amd64
      volumes:
      - name: mariadb-backup-persistent-storage
        persistentVolumeClaim:
          claimName: phpipam-backup-db-pv-claim
          readOnly: true
  volumeClaimTemplates:
  - kind: PersistentVolumeClaim
    apiVersion: v1
    metadata:
      name: phpipam-mysql-data
      labels:
        app.kubernetes.io/name: phpipam
        app.kubernetes.io/instance: my-phpipam
        app.kubernetes.io/component: phpipam-db
    spec:
      storageClassName: nfs-client-retain
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
