k8s_yaml/netpol-db-utils.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: firewall-accept-db-utils
  namespace: phpipam
  labels:
    app.kubernetes.io/name: phpipam
    app.kubernetes.io/instance: my-phpipam
    app.kubernetes.io/component: phpipam-db-utils
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: phpipam
      app.kubernetes.io/instance: my-phpipam
      app.kubernetes.io/component: phpipam-db-utils
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: phpipam
          app.kubernetes.io/instance: my-phpipam
          app.kubernetes.io/component: phpipam-db
    ports:
    - protocol: TCP
      port: 3306
