k8s_yaml/netpol-frontend.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: firewall-accept-frontend
  namespace: phpipam
  labels:
    app.kubernetes.io/name: phpipam
    app.kubernetes.io/instance: my-phpipam
    app.kubernetes.io/component: phpipam-frontend
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: phpipam
      app.kubernetes.io/instance: my-phpipam
      app.kubernetes.io/component: phpipam-frontend
  ingress:
  - ports:
    - protocol: TCP
      port: 80
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: phpipam
          app.kubernetes.io/instance: my-phpipam
          app.kubernetes.io/component: phpipam-db
    ports:
    - protocol: TCP
      port: 3306
